# mdsets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: -mdsets--bug-report.md  -mdsets--feature-request.md
mdsets/base/: BaseDataset.py  dataset.py  hook.py  operator.py
mdsets/core/base/: BaseConnector.py  BaseDestination.py  BaseSource.py
mdsets/core/connector/: ExampleConnector.py
mdsets/core/destination/: ExampleDestination.py  S3Destination.py
mdsets/core/source/: ExampleSource.py
scripts/: install_airflow.sh
